# ZoomState

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  Zoom.sln  ZoomState.sln
Zoom/: Zoom.vcxproj  Zoom.vcxproj.filters  dllmain.cpp
ZoomState/: ZoomState.vcxproj  ZoomState.vcxproj.filters  dllmain.cpp
include/: _ZoomState.h
src/: ZoomState.cpp  _ZoomState.cpp  dllmain.cpp  free.cpp  process.cpp  register.cpp  zoom.cpp
